--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -21,6 +21,10 @@ body {
     background: #151515;
 }
 
+body.semScroll {
+    overflow: hidden;
+}
+
 .textoColorido {
     color:#9c9696;
 }
@@ -918,7 +922,6 @@ footer nav:nth-child(3) div:nth-child(2) {
     display: flex;
     align-items: top;
     height: 100%;
-    overflow-y: scroll;
     overflow-x: hidden;
     background: #212121;
     border: 2px solid #2E2C2C;
@@ -1015,7 +1018,6 @@ input {
     border: 2px solid #40E194;
 }
 
-/* Mover o label quando o input está focado ou preenchido */
 .contentInputForm .navInputFormText input:focus + label,
 .contentInputForm .navInputFormText input:not(:placeholder-shown) + label {
     top: -25%;
@@ -1091,6 +1093,11 @@ form .navInputFormRadio input:checked + label {
     position: absolute;
     bottom: 6%;
     right: 5%;
+}
+
+.navBtnsForm0 {
+    display: none;
+    pointer-events: none;
 }
 
 form .linkLogoForm img {
@@ -1323,6 +1330,12 @@ form .linkLogoForm img {
         bottom: 0;
         margin: 2rem;
         right: 10%;
+    }
+    
+    .navBtnsForm0 {
+        display: flex;
+        pointer-events: all;
+        argin: 2rem 1rem 3rem 1rem;
     }
 
     .navBtnsForm1 {
